# reconnecting-websocket.rs

./: Cargo.toml  LICENSE  README.md  rust-toolchain.toml  rustfmt.toml
.github/: FUNDING.yml
.github/workflows/: build.yml  bump_base_images.yml
containers/builder/: Containerfile
scripts/: integration_tests
src/: builder.rs  constants.rs  dummy_tracing.rs  error.rs  event.rs  lib.rs  location.rs  socket.rs  state.rs
tests/: common.rs  reconnect.rs
